Add table columns for pokemon name and image

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 
     <div id="pokemon_info">
       <div>
+        <h3>Pokemon</h3>
+      </div>
+      
+      <div>
+        <h3>Image</h3>
+      </div>
+
+      <div>
         <h3>Type 1</h3>
       </div>
 
