Add a play button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </div>
 
     <button id="show_button">Show Pokemon</button>
+    <button id="play_button">Play</button>
       
   </body>
 </html>
