Change color of matching part of guesses

--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
     </div>
 
     <div id="pokemon_info">
-      <div>
+      <div class="header">
         <h3>Pokemon</h3>
       </div>
       
-      <div>
+      <div class="header">
         <h3>Image</h3>
       </div>
 
-      <div>
+      <div class="header">
         <h3>Type 1</h3>
       </div>
 
-      <div>
+      <div class="header">
         <h3>Type 2</h3>
       </div>
 
-      <div>
+      <div class="header">
         <h3>Habitat</h3>
       </div>
 
-      <div>
+      <div class="header">
         <h3>Color</h3>
       </div>
 
-      <div>
+      <div class="header">
         <h3>Evolution Stage</h3>
       </div>
     </div>
