Reorder table and add new column

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
       </div>
 
       <div class="header">
+        <h3>Evolution Stage</h3>
+      </div>
+
+      <div class="header">
+        <h3>Fully Evolved</h3>
+      </div>
+
+      <div class="header">
         <h3>Habitat</h3>
       </div>
 
@@ -53,9 +61,6 @@
         <h3>Color</h3>
       </div>
 
-      <div class="header">
-        <h3>Evolution Stage</h3>
-      </div>
     </div>
 
     <button id="show_button">Show Pokemon</button>
