Add a lose condition

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
   <body>
 
     <dialog id="play_dialog">
+      <p>Try to guess the correct pokemon from the original 151 in less than 6 guesses!</p>
       <button id="play_button">Play</button>
     </dialog>
 
+    <dialog id="finish_dialog">
+    </dialog>
     
     
     <div id="contents">
