--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div id="contents">
       <h1>Guess That Pokemon!</h1>
       
-      <div>
+      <div id="search_contents">
         <input type="search" id="search">
+        <div id="search_results"></div>
       </div>
 
-      <div id="search_results"></div>
 
       <div id="pokemon_info">
         <div class="header">
