Improve styling on play dialog

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <body>
 
     <dialog id="play_dialog">
-      <p>Try to guess the correct pokemon from the original 151 in less than 6 guesses!</p>
-      <button id="play_button">Play</button>
+      <div id="play_dialog_contents">
+        <h2>Pokedle</h2>
+        <p>Try to guess the correct pokemon from the original 151 in less than 6 guesses!</p>
+        <button id="play_button">Play</button>
+      </div>
     </dialog>
 
     <dialog id="finish_dialog">
