Reveal target pokemon after game ends

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </dialog>
 
     <dialog id="finish_dialog">
+      <div id="finish_dialog_contents">
+      </div>
     </dialog>
     
     
