Add play again button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <dialog id="finish_dialog">
       <div id="finish_dialog_contents">
+        <div id="game_over_contents"></div>
+        <button id="play_again_button">Play Again</button>
       </div>
     </dialog>
     
@@ -70,6 +72,8 @@
 
       </div>
     </div>
+
+    <div id="test">TEST</div>
       
   </body>
 </html>
