Add test log to debug issue on mobile

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <div id="search_results"></div>
       </div>
 
+    <div>
+      Test Log:
+      <div id="test_log"></div>
+    </div> 
+
 
       <div id="pokemon_info">
         <div class="header">
