Change input type from search to default

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>Guess That Pokemon!</h1>
       
       <div id="search_contents">
-        <input type="search" id="search">
+        <input id="search">
         <div id="search_results"></div>
       </div>
 
